assets/style/style.css
body{
    background-color: black;
    color: white;
    height: 100%;
}
.scoreboard{
    display: flex;
    justify-content: space-between;
}

.score{
    margin: auto;
}

.container{
    max-height: 100vh;
    width: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-top: 2rem;
}
.display{
    display: flex;
    align-items: center;
    width: auto;
    min-width: 70vh;
    margin: auto;
    border-style: solid;
    border-color: white;
    min-height: 9rem;
}

#Player{
    margin-left: auto;
}
.grid{
    display: block;
    justify-content: center;
    align-items: center;
}
.row{
    min-height: 3rem;
    border-style: solid;
    border-color: white;
}
.col-lg-6{
    display: flex;
    align-items: center;
}
.fa-regular {
    color: white;
  }
  
.choice-button{
    background-color: rgba(0,0,0,0);
    border: none;
}

.Button-Image{
    max-width: 25px;
    max-height: 25px;
}

.Display-Image{
    max-width: 55px;
    max-height: 55px;
}

#footer{
    flex-flow: column;
}

.score-adjustment{
    display: flex;
}

.arrow{
    border: solid white;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 3px;
}

.up{
    transform: rotate(-135deg);
    -webkit-transform: rotate(-135deg);
}
  
.down{
    transform: rotate(45deg);
    -webkit-transform: rotate(45deg);
}

